# dirtless

./: .gitignore  README.md  dirtless
ZebraLib/: CMakeLists.txt
ZebraLib/documentation/: coordinates.md  task_list
ZebraLib/shaders/: blit.frag  colored_triangle.vert  default_lit.frag  fullscreen.vert  textured_lit.frag  tri_mesh.vert  tri_mesh.vert.spv  triangle.frag  triangle.vert
ZebraLib/src/: CMakeLists.txt  d_rel.cpp  d_rel.h  g_buffer.cpp  g_buffer.h  g_camera.cc  g_camera.cpp  g_camera.h  g_descriptorset.cpp  g_descriptorset.h  g_mesh.cc  g_mesh.cpp  g_mesh.h  g_pipeline.cc  g_pipeline.cpp  g_pipeline.h  g_texture.cpp  g_texture.h  g_types.h  g_vec.h  g_vku.cpp  g_vku.h  input_actions.strings  main.cc  renderer.cpp  renderer.h  vki.h  z_debug.h  zebralib.cc  zebralib.cpp  zebralib.h  zebratypes.h
